# prediction_provider

./: .gitignore  =4.0.0  BEHAVIORAL_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  PLUGIN_REPLICABILITY_GUIDE.md  PREPROCESSOR_BDD_DESIGN.md  PREPROCESSOR_BDD_TEST_DEFINITIONS.md  PREPROCESSOR_BDD_TEST_PLAN.md  PREPROCESSOR_IMPLEMENTATION_ARCHITECTURE.md  README.md  README_REAL_FEEDER.md  REAL_DATA_PIPELINE_PLAN.md  REAL_DATA_TEST_TEMPLATE.md  REFERENCE.md  REFERENCE_files.md  REFERENCE_plugins.md  REFERNECE_plugins.md  TESTING_GUIDE.md  TEST_SUMMARY.md  analyze_column_ranges.py  compare_indicators.py  create_stoch_lookup.py  debug_actual_calculator_output.py  debug_aligned_comparison.py  debug_exact_featureeng.py  debug_exact_test_simulation.py  debug_exact_values.py  debug_failed_indicators.py  debug_failing_indicators.py  debug_features.py  debug_indicators.py  debug_normalization_params.py  debug_ohlc_comparison.py  debug_pipeline.py  debug_prediction_api.py  debug_simple_prediction.py  debug_stoch_final.py  debug_stoch_mapping.py  debug_stochastic_alignment.py  debug_stochastic_alignment_detailed.py  (+64 more)
app/: admin_endpoints.py  arima_optimizer.py  auth.py  billing_endpoints.py  cli.py  client_endpoints.py  config.py  config_handler.py  config_merger.py  data_handler.py  data_processor copy.py  data_processor.py  database.py  database_models.py  database_models_extended.py  evaluator_endpoints.py  heuristic_strategy.py  main.py  models.py  optimizer_ga.py  plugin_loader.py  plugin_manager.py  reconstruction.py  user_management.py
plugins_core/: default_core.py  (+1 more)
(+109 files in other folders)
